--- a/3_assignment_2/PM_assignment_2.ipynb
+++ b/3_assignment_2/PM_assignment_2.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "&nbsp;\n",
         "\n",
-        "**Deadline:** Sunday, February 28, 11:59pm. \n",
+        "**Deadline:** See C@mpus. \n",
         "The assignment must be completed individually. The TBS plagarism rules apply.\n",
         "\n",
         "&nbsp;\n",
