--- a/2_assignment_1/1_PM_assignment_1.ipynb
+++ b/2_assignment_1/1_PM_assignment_1.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "&nbsp;\n",
         "\n",
-        "**Deadline:** Sunday, February 28, 11:59pm.\n",
+        "**Deadline:** See C@mpus.\n",
         "\n",
         "&nbsp;\n",
         "\n",
