--- a/2_assignment_1/PM_assignment_1_hints.ipynb
+++ b/2_assignment_1/PM_assignment_1_hints.ipynb
@@ -89,7 +89,7 @@
       },
       "source": [
         "# step 1: install required libraries using \"!pip install\"\n",
-        "!pip install --upgrade pandas-datareader\n"
+        "!pip install --upgrade pandas-datareader\n",
         "!pip install ffn"
       ],
       "execution_count": null,
